# hello-world-singleton

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: hello-world.hpp
src/: CMakeLists.txt  hello-world.cpp  main.cpp
